welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: too many arguments for method droite: ()Unit
droite(4)
      ^